--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,30 +20,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: cachix/install-nix-action@v27
+      - uses: cachix/install-nix-action@v31
         with:
           github_access_token: ${{ github.token }}
 
-      - uses: cachix/cachix-action@v15
+      - uses: cachix/cachix-action@v16
         with:
           name: razielgn
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
-      - name: run checks
-        run: nix flake check -L
+      - run: nix flake check -L
+      - run: nix build -L
 
       - name: build and push docker image
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           nix run .#flyctl -- auth token | nix run .#skopeo -- login -u x --password-stdin registry.fly.io
-
-          eval "$(nix build --print-out-paths .#dockerImage)" \
-            | gzip --fast \
-            | nix run .#skopeo -- \
-                --insecure-policy \
-                copy \
-                docker-archive:/dev/stdin \
-                "docker://${{ env.IMAGE_REPO }}:${{ github.sha }}"
+          nix run .#dockerImage.copyTo "docker://${{ env.IMAGE_REPO }}:${{ github.sha }}"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
